* Defining source encoding.
git-svn-id: svn+ssh://svn.code.sf.net/p/mrw/code/trunk@219 0b73ed94-99fe-4531-ab00-e2d4daa7083f

--- a/Stellwerk/build.xml
+++ b/Stellwerk/build.xml
@@ -177,6 +177,7 @@
 				splitindex="true"
 				use="true"
 				failonerror="true"
+				encoding="ISO-8859-15"
 				docencoding="UTF-8"
 				charset="UTF-8"
 				windowtitle="Modell(-bau-)basierte Eisenbahnsteuerung">
