* Signale für Blockbetrieb ergänzt.
git-svn-id: svn+ssh://svn.code.sf.net/p/mrw/code/trunk@220 0b73ed94-99fe-4531-ab00-e2d4daa7083f

--- a/AnlageYakindu/Yakindu/Signale.properties
+++ b/AnlageYakindu/Yakindu/Signale.properties
@@ -1,2 +1,21 @@
 #Mork2/Signale.properties
 #Thu Dec 13 14:16:54 GMT 2007
+
+StreckeBlock201=22,3
+StreckeBlock202=19,3
+StreckeBlock301=22,2
+StreckeBlock302=19,2
+
+BahnhofBrambuschB=1,5
+BahnhofBrambuschC=1,6
+BahnhofBrambuschG=30,5
+BahnhofBrambuschH=30,6
+
+BahnhofBrambuschN1=19,4
+BahnhofBrambuschP1=9,4
+BahnhofBrambuschN2=19,5
+BahnhofBrambuschP2=9,5
+BahnhofBrambuschN3=19,6
+BahnhofBrambuschP3=9,6
+BahnhofBrambuschN4=19,7
+BahnhofBrambuschP4=9,7
