--- a/AnlageZwei/build.properties
+++ b/AnlageZwei/build.properties
@@ -2,4 +2,5 @@ source.. = src/main/java,\
            src/generated/java,\
            src/main/resources,\
            src/main/test/,
-bin.includes = META-INF/,\n               .
+bin.includes = META-INF/,\
+	.
