--- a/AnlageYakindu/build.properties
+++ b/AnlageYakindu/build.properties
@@ -1,4 +1,5 @@
 source.. = src/main/java,\
            src/generated/java,\
            src/main/resources
-bin.includes = META-INF/,\n               .
+bin.includes = META-INF/,\
+               .
