* Instrumentierung macht erst ant clean!
git-svn-id: svn+ssh://svn.code.sf.net/p/mrw/code/trunk@228 0b73ed94-99fe-4531-ab00-e2d4daa7083f

--- a/AnlageZwei/build.xml
+++ b/AnlageZwei/build.xml
@@ -244,7 +244,7 @@
 		</findbugs>
 	</target>
 	
-	<target name="instr" depends="compile">
+	<target name="instr" depends="clean,compile">
 		<mkdir dir="${instr-path}"/>
 		<jacoco:instrument destdir="${instr-path}">
 			<fileset dir="${bin-path}" includes="**/*.class"/>
