* Clean Target entfernt.
git-svn-id: svn+ssh://svn.code.sf.net/p/mrw/code/trunk@233 0b73ed94-99fe-4531-ab00-e2d4daa7083f

--- a/AnlageZwei/build.xml
+++ b/AnlageZwei/build.xml
@@ -253,7 +253,7 @@
 		</junit>
 	</target>
 
-	<target name="test" depends="clean,compile">
+	<target name="test" depends="compile">
 		<jacoco:coverage destfile="${jacoco-exec}">
 		    <junit printsummary="on" fork="true" forkmode="once" haltonerror="yes" haltonfailure="yes">
 				<classpath refid="coverage.classpath" />
