--- a/AnlageZwei/build.xml
+++ b/AnlageZwei/build.xml
@@ -268,6 +268,7 @@
 				<test name="de.morknet.mrw.test.DkwTest"/>
 				<test name="de.morknet.mrw.test.ControllerTest"/>
 				<test name="de.morknet.mrw.test.SimpleRouteTest"/>
+				<test name="de.morknet.mrw.test.SimpleTourTest"/>
 				<test name="de.morknet.mrw.test.BeerModeTest"/>
 				<test name="de.morknet.mrw.test.TourModeTest"/>
 				<test name="de.morknet.mrw.test.ErrorConditionTest"/>
