--- a/daemon/Makefile
+++ b/daemon/Makefile
@@ -3,13 +3,13 @@ CPP	= gcc
 SRC	= mrw_daemon.cc SerialLine.cc ServerSocket.cc UartReader.cc Log.cc ClientHandler.cc
 PROGS	= mrw_daemon
 
-LDFLAGS		= -lm -lpthread
+LDLIBS		= -lm -lpthread
 CPPFLAGS	= -I ../mc
 
 all:	$(PROGS)
 
 mrw_daemon:	mrw_daemon.o SerialLine.o ServerSocket.o UartReader.o Log.o ClientHandler.o
-	$(LINK.cc) -o $@ $^ $(LDFLAGS)
+	$(LINK.cc) -o $@ $^ $(LDLIBS)
 
 clean:
 	rm -rf *.o $(PROGS) .dep
