--- a/tools/Makefile
+++ b/tools/Makefile
@@ -3,7 +3,7 @@ CPP		= gcc
 SRC		= ubbr.c uart.c mcp_config.c rate.c table.c
 PROGS		= ubbr uart mcp_config rate table
 CFLAGS		= -O3
-LDFLAGS		= -lm
+LDLIBS		= -lm
 CPPFLAGS	= -I ../mc
 
 all:	$(PROGS)
