* Modell um Vorsichgnale ergänzt.  * UTF-8 korrigiert.
git-svn-id: svn+ssh://svn.code.sf.net/p/mrw/code/trunk@256 0b73ed94-99fe-4531-ab00-e2d4daa7083f

--- a/AnlageZwei/Mork2/Signale.properties
+++ b/AnlageZwei/Mork2/Signale.properties
@@ -64,3 +64,7 @@ BahnhofAltUlmN1=27,6
 StreckeBergP1=10,2
 StreckeWestH=22,2
 StreckeWest202=18,3
+BahnhofAltUlmv201=16,7
+BahnhofAltUlmv301=16,8
+BahnhofAltUlmv401=16,9
+BahnhofAltUlmv601=12,10
