* Findbugs erneuert und Filter für Tests ergänzt.  * JaCoCo erneuert.  * MRW ist jetzt mit JDK 8 lauffähig.
git-svn-id: svn+ssh://svn.code.sf.net/p/mrw/code/trunk@257 0b73ed94-99fe-4531-ab00-e2d4daa7083f

--- a/AnlageZwei/build.xml
+++ b/AnlageZwei/build.xml
@@ -12,6 +12,7 @@
 	<property name="model-file"      value="./model.jar"/>
 
 	<property name="findbugs.home"     value="../findbugs"/>
+	<property name="findbugs.exclude"  value="./findbugs-exclude.xml"/>
 	<property name="findbugs.results"  value="./findbugs-results.xml"/>
 
 	<property file="${res-path}/workflow.properties" />
@@ -238,6 +239,7 @@
 				classpathref="run.classpath"
 				effort="max"
 				reportlevel="low"
+				excludeFilter="${findbugs.exclude}"
 				failonerror="true">
 			<sourcePath path="${src-path}:{gen-path}"/>
 			<class location="${bin-path}"/>
