* Added compile options to Makefile.
git-svn-id: svn+ssh://svn.code.sf.net/p/mrw/code/trunk@264 0b73ed94-99fe-4531-ab00-e2d4daa7083f

--- a/canprog/Makefile
+++ b/canprog/Makefile
@@ -1,4 +1,4 @@
-CFLAGS	= -O3
+CFLAGS	= -O3 -Wall
 SRC		= canprog.c gwsim.c can_pc.c mrw_dump.c receive.c ping.c send.c\
 	qryerr.c qrybuf.c reset.c switch.c signal.c form.c config.c setid.c\
 	rail.c occupation.c light.c busy.c mrw_daemon.cc
