--- a/tools/Makefile
+++ b/tools/Makefile
@@ -2,7 +2,7 @@ CC		= gcc
 CPP		= gcc
 SRC		= ubbr.c uart.c mcp_config.c rate.c table.c
 PROGS		= ubbr uart mcp_config rate table
-CFLAGS		= -O3
+CFLAGS		= -O3 -Wall
 LDLIBS		= -lm
 CPPFLAGS	= -I ../mc
 
