--- a/Stellwerk/build.xml
+++ b/Stellwerk/build.xml
@@ -16,7 +16,7 @@
 	<property name="src-path"      value="./src/main/java"/>
 	<property name="gen-path"      value="./src/generated/java"/>
 	<property name="doc-path"      value="../api"/>
-	<property name="findbugs.home" value="../findbugs"/>
+	<property name="spotbugs.home" value="../spotbugs"/>
 	<property name="jar-file"      value="./${bundleId}_${bundleVersion}.jar"/>
 	<property name="startup"       value="./startup.sh"/>
 
@@ -34,8 +34,8 @@
 	<!--              Setting up libraries                    --> 
 	<!-- ==================================================== -->
 
-	<path id="findbugs.lib">
-		<fileset dir="${findbugs.home}">
+	<path id="spotbugs.lib">
+		<fileset dir="${spotbugs.home}">
 			<include name="lib/*.jar"/>
 		</fileset>
 	</path>
@@ -74,16 +74,16 @@
 		</fileset>
 	</path>
 
-	<path id="findbugs.classpath">
+	<path id="spotbugs.classpath">
 		<path refid="run.classpath"/>
-		<path refid="findbugs.lib"/>
+		<path refid="spotbugs.lib"/>
 	</path>
 
 	<!-- ==================================================== -->
 	<!--            Setting up target definitions             --> 
 	<!-- ==================================================== -->
 
-	<taskdef name="findbugs" classname="edu.umd.cs.findbugs.anttask.FindBugsTask" classpathref="findbugs.lib"/>
+	<taskdef name="spotbugs" classname="edu.umd.cs.findbugs.anttask.FindBugsTask" classpathref="spotbugs.lib"/>
 
 	<!-- ==================================================== -->
 	<!--              Setting up build targets                --> 
@@ -151,9 +151,9 @@
 		<java classname="de.morknet.mrw.ConfigureRailway" classpathref="run.classpath"/>
 	</target>
 	
-	<target name="findbugs" depends="compile">
+	<target name="spotbugs" depends="compile">
 		<echo message="Checking ${ant.project.name}..."/>
-		<findbugs jvmargs="-Xmx128m" home="${findbugs.home}"
+		<spotbugs jvmargs="-Xmx128m" home="${spotbugs.home}"
 				output="xml:withMessages"
 				outputFile="findbugs-results.xml"
 				effort="max"
@@ -162,7 +162,7 @@
 			<sourcePath path="${src-path}:{gen-path}"/>
 			<class location="${bin-path}"/>
 			<auxclasspath refid="run.classpath"/>
-		</findbugs>
+		</spotbugs>
 	</target>
 
 	<target name="javadoc" depends="compile">
