Dumping Java version in Jenkins tests.

--- a/AnlageZwei/build.xml
+++ b/AnlageZwei/build.xml
@@ -278,6 +278,11 @@
 		</jacoco:coverage>
 	</target>
 
+	<target name="print-version">
+		<echo>Java/JVM version: ${ant.java.version}</echo>
+		<echo>Java/JVM detail version: ${java.version}</echo>
+	</target>
+
 	<target name="jacoco" depends="test">
 		<jacoco:report>
 			<executiondata>
