--- a/tools/Makefile
+++ b/tools/Makefile
@@ -1,5 +1,7 @@
-CC		= gcc
-CPP		= gcc
+CC		?= gcc
+CXX		?= g++
+CPP		?= gcc
+
 SRC		= ubbr.c uart.c mcp_config.c rate.c table.c
 PROGS		= ubbr uart mcp_config rate table
 CFLAGS		= -O3 -Wall
