Adjusted some rail parts for upcoming MRW next generation.

--- a/AnlageZwei/Mork2/Gleisteile.properties
+++ b/AnlageZwei/Mork2/Gleisteile.properties
@@ -71,10 +71,12 @@ GleisS6b=14,11
 GleisS6a=17,11
 Gleis6=21,11
 GleisN6a=27,11
+GleisN6b=30,10
 
 GleisS7a=17,12
 Gleis7=21,12
 GleisN7a=27,12
+GleisN7b=29,12
 
 # Schattenbahnhof
 GleisO3a=3,4
