--- a/Microcontroller/.project
+++ b/Microcontroller/.project
@@ -22,4 +22,15 @@
 		<nature>org.openarchitectureware.base.oawNature</nature>
 		<nature>org.eclipse.xtend.shared.ui.xtendXPandNature</nature>
 	</natures>
+	<filteredResources>
+		<filter>
+			<id>1670856231254</id>
+			<name></name>
+			<type>30</type>
+			<matcher>
+				<id>org.eclipse.core.resources.regexFilterMatcher</id>
+				<arguments>node_modules|\.git|__CREATED_BY_JAVA_LANGUAGE_SERVER__</arguments>
+			</matcher>
+		</filter>
+	</filteredResources>
 </projectDescription>
