--- a/AnlageZwei/AnlageZwei.conf
+++ b/AnlageZwei/AnlageZwei.conf
@@ -54,12 +54,12 @@ DKW2="8,7,R"
 DKW4="27,7,R"
 DKW8="8,8,hR"
 Gleis1="20,6,XXXXXXXX"
-Gleis2="17,7,qXXXXXXXXXXX"
-Gleis3="17,8,qXXXXXXXXXXX"
-Gleis4="17,9,qXXXXXXXXXXX"
-Gleis5="19,10,XXXXXXXXX"
-Gleis6="19,11,XXXXXXXXX"
-Gleis7="19,12,XXXXXXXXX"
+Gleis2="16,7,qqqXXXXXXXXXXXXXXX"
+Gleis3="16,8,qqqXXXXXXXXXXXXXXX"
+Gleis4="16,9,qqqXXXXXXXXXXXXXXX"
+Gleis5="18,10,qqqXXXXXXXXXXXX"
+Gleis6="18,11,qqqXXXXXXXXXXXX"
+Gleis7="18,12,qqqXXXXXXXXXXXX"
 GleisB1="5,2,XXXXXXXX"
 GleisB1a="5,2"
 GleisB2="1,3,XXXX"
@@ -76,19 +76,19 @@ GleisHS1="17,1,XXXX"
 GleisHS3="16,3,qXXXXXXXX"
 GleisN1a="23,6,XXXX"
 GleisN1b_b="34,6,qXXXXX"
-GleisN2a="21,7,XXXX"
+GleisN2a="21,7,hXX"
 GleisN2c="29,7,XXXXX"
 GleisN2e="34,7,qXXXXX"
-GleisN3a="21,8,XXXX"
+GleisN3a="21,8,hXX"
 GleisN3b="26,8,X"
 GleisN3c="32,8,q"
 GleisN3d="34,8,qXXXXX"
 GleisN3e="36,8,qXXX"
-GleisN4a="21,9,XXXX"
-GleisN5a="22,10,qXXXX"
-GleisN6a="22,11,qXXXX"
+GleisN4a="21,9,hXX"
+GleisN5a="22,10,qqqXX"
+GleisN6a="22,11,qqqXX"
 GleisN6b="27,9,qXXXVVL"
-GleisN7a="22,12,qXXXX"
+GleisN7a="22,12,qqqXX"
 GleisN7b="27,9,qqqXXXXXVVVL"
 GleisO2a="1,5,hXXXXXXXX"
 GleisO3a="1,1,hXXXXXXXX"
@@ -103,21 +103,21 @@ GleisS1g="2,4,qXXXXXXXXXXXXX"
 GleisS1h_a="4,3,XXXXXXXXR"
 GleisS1h_b="2,3,qXXX"
 GleisS2="12,4,qqqXXXXXXXXXXXXXXXXXXXX"
-GleisS2a="15,7,qXXXX"
+GleisS2a="15,7,qXX"
 GleisS2b="10,7,XXXX"
 GleisS2d="0,7,qqqXXXXXXXXXXX"
 GleisS3="12,3,qqqXXXXXXXXXXXXXXXXXXXX"
-GleisS3a="15,8,qXXXX"
+GleisS3a="15,8,qXX"
 GleisS3c="0,8,qqqXXXXXXXXXXX"
 GleisS4="12,2,qqqXXXXXXXXXXXXXXXXXXXX"
-GleisS4a="15,9,qXXXX"
+GleisS4a="15,9,qXX"
 GleisS4b="4,9,hXX"
 GleisS4c="1,9,qqqXXXXXXX"
 GleisS5="12,1,qqqXXXXXXXXXXXXXXXXXXXX"
-GleisS5a="17,10,qXXX"
-GleisS6a="17,11,qXXX"
+GleisS5a="17,10,qXX"
+GleisS6a="17,11,qXX"
 GleisS6b="9,10,hXXXXXXVR"
-GleisS7a="17,12,qXXX"
+GleisS7a="17,12,qXX"
 GleisSO1a="5,5,hXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
 GleisSO2a="11,4,XXX"
 GleisSO2c="5,1,h"
